--- a/E-Voter/_Imports.razor
+++ b/E-Voter/_Imports.razor
@@ -7,7 +7,10 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using E_Voter
-@using E_Voter.Shared
+@using E_Voter.Models
+@using E_Voter.Models.Auth
+@using E_Voter.Components
+@using E_Voter.Layouts
 @using MudBlazor
 @using Fluxor
 @using Fluxor.Blazor.Web.Components
