login page done

--- a/E-Voter/Pages/Home.razor
+++ b/E-Voter/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@inject NavigationManager NavMgr
 @page "/home"
+@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
 <AuthWrapper>
 	<Authorized>
